--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,27 +14,49 @@
 ## JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 #spring.jpa.properties.hibernate.format_sql=true
 
+#????
+server:
+  port: 8093
+#DB????
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springbootclass?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: bootuser
+    password: 123
+  thymeleaf:
+    cache: false
 
-# h2 DB ??
-spring.h2.console.enabled=true
-# ???? ???? (true - ????, false - ????)
-spring.datasource.generate-unique-name=false
-# /h2-console? ????? ??? ????
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+  # JPA ?? ??, datasource: ??? ?? ??? ??????.
+  # JPA? ?????? ??
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      # create : ??? ? ?? ?? ???
+      # update : table? drop?? ?? ???? ?????? ??
 
-#jpa
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.database=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## h2 DB ??
+#spring.h2.console.enabled=true
+## ???? ???? (true - ????, false - ????)
+#spring.datasource.generate-unique-name=false
+## /h2-console? ????? ??? ????
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
-#logging
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.sql=DEBUG
-logging.level.jpa=DEBUG
+##jpa
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+#spring.jpa.database=h2
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+##logging
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate.sql=DEBUG
+#logging.level.jpa=DEBUG
 
